login and signup is working properly